--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server/index.js",
     "react-dev": "webpack -d --watch",
-    "build": "webpack -p --config ./webpack.production.config.js"
+    "build": "webpack -p --config ./webpack.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +20,7 @@
     "react-ga": "^2.7.0",
     "react-icons": "^3.10.0",
     "react-particles-js": "^2.7.1",
+    "react-router-dom": "^5.2.0",
     "react-typed": "^1.2.0"
   },
   "devDependencies": {
